完成页面间跳转

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".NeedActivity" />
+        <activity android:name=".DataActivity" />
+        <activity android:name=".OptimizeActivity"></activity>
     </application>
 
 </manifest>
