--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,16 +9,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".NeedActivity" />
-        <activity android:name=".DataActivity" />
-        <activity android:name=".OptimizeActivity"></activity>
+        <activity android:name=".activity.NeedActivity" />
+        <activity android:name=".activity.DataActivity" />
+        <activity android:name=".activity.OptimizeActivity"></activity>
     </application>
 
 </manifest>
