完成另一个页面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         <activity android:name=".activity.FodderActivity" />
         <activity android:name=".activity.OptimizeActivity" />
         <activity android:name=".activity.FodderInfoActivity" />
+        <activity android:name=".activity.CowInfoActivity"></activity>
     </application>
 
 </manifest>
