优化了饲料页面关系

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,9 @@
         <activity
             android:name=".activity.CowInfoActivity"
             android:windowSoftInputMode="stateHidden" />
+        <activity
+            android:name=".activity.FodderAddActivity"
+            android:windowSoftInputMode="stateHidden" />
     </application>
 
 </manifest>
