--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
         <activity
             android:name=".activity.cow.CowAddActivity"
             android:windowSoftInputMode="stateHidden" />
+        <activity android:name=".activity.optimize.FodderSelectActivity"></activity>
     </application>
 
 </manifest>
