--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,6 @@ dependencies {
     compile 'org.litepal.android:core:1.6.0'
     compile 'com.android.support:recyclerview-v7:26.0.0-alpha1'
     testCompile 'junit:junit:4.12'
+    compile 'com.squareup.okhttp3:okhttp:3.9.0'
+    compile 'com.google.code.gson:gson:2.8.1'
 }
