--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
             android:name=".activity.cow.CowAddActivity"
             android:windowSoftInputMode="stateHidden" />
         <activity android:name=".activity.optimize.FodderSelectActivity" />
-        <activity android:name=".activity.optimize.ResultActivity"></activity>
+        <activity android:name=".activity.optimize.ResultActivity"/>
     </application>
 
 </manifest>
